--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
         <div class="panel panel-default">
           <div class="panel-heading">Last activities:</div>
-          <table class="table">
+          <table id="words" class="table table-striped table-bordered" cellspacing="0" width="100%">
 
             <thead>
               <tr>
@@ -21,13 +21,17 @@
                 <th>Translation</th>
               </tr>
             </thead>
-            {% for match in words %}
+
+            <tfoot>
               <tr>
-                <td>{{ match.user.name }}</td>
-                <td>{{ match.word.text}}</td>
-                <td>{{ match.translation.text }}</td>
+                <th>User</th>
+                <th>Word</th>
+                <th>Translation</th>
               </tr>
-            {% endfor %}
+            </tfoot>
+            <tbody>
+
+            </tbody>
 
           </table>
         </div>
@@ -74,13 +78,34 @@
 
   <script type="text/javascript">
     $(function(){
-        $('#wordForm').bind('submit', function(){
-          Sijax.request('save_word',
-            [$('#word').val(), $('#word_lang').val(), $('#translation').val(), $('#tran_lang').val()]);
+      $('#wordForm').bind('submit', function(){
 
-          return false;          //prevent submitting
+        $.getJSON($SCRIPT_ROOT + '/save_word', {
+          word: $('#word').val(),
+          word_lang: $('#word_lang').val(),
+          trans: $('#translation').val(),
+          trans_lang: $('#tran_lang').val()
+        }, function(data) {
 
+          var url = $SCRIPT_ROOT + "/load_words";
+          $('#words').dataTable( {
+             destroy: true,
+            "ajax": url
+          });
         });
+
+        return false;          //prevent submitting
+
+      });
+    });
+
+    $(function(){
+      var url = $SCRIPT_ROOT + "/load_words";
+
+      $('#words').dataTable( {
+        "ajax": url
+      });
+
     });
   </script>
 {% endblock %}
