--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,11 +9,16 @@
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+  <script src="http://cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js"></script>
+  <script src="http://cdn.datatables.net/plug-ins/3cfcc339e89/integration/bootstrap/3/dataTables.bootstrap.js"></script>
+
 
   <script type="text/javascript" src="/static/js/sijax/sijax.js"></script>
-  <script type="text/javascript">
-    {{ g.sijax.get_js()|safe }}
+
+  <script type=text/javascript>
+    $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
   </script>
+
   {% block head %}{% endblock %}
 </head>
 <body>
